Archive2/33/a1d1342f2f2d9a/output
main.cpp: In function 'int main()':
main.cpp:26:2: error: static assertion failed: fail
  static_assert (a != b, "fail");
  ^
